# mafia-cards-giver

./: CMakeLists.txt  README.md  roles.h
client/: main.cpp
server/: helpers.h  main.cpp  players.h  rooms.h  server.h  tg_wrapper.h
